--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libzmq"]
 	path = libzmq
 	url = https://github.com/zeromq/libzmq.git
+[submodule "czmq"]
+	path = czmq
+	url = https://github.com/zeromq/czmq.git
