--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 
 before_install:
-  - sudo add-apt-repository ppa:snaipewastaken/ppa
+  - sudo add-apt-repository -y ppa:snaipewastaken/ppa
 
 install:
   - sudo apt-get update
