--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: c
-
-before_install:
-  - sudo add-apt-repository -y ppa:snaipewastaken/ppa
+compiler:
+  - gcc
+  - clang
 
 install:
-  - sudo apt-get update
-  - sudo apt-get install -y libzmq3-dev criterion-dev
-
-before_script:
-  - make check
+  - pip install conan
 
 script:
+  - mkdir build
+  - cd build
+  - conan install ..
+  - cmake ..
   - make test
