Install conan for user only

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: c
-sudo: yes
 compiler:
   - gcc
   - clang
 
 install:
-  - pip install conan
+  - pip install --user conan
 
 script:
   - mkdir build
