Build missing packages from source

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 before_script:
   - mkdir build
   - cd build
-  - conan install ..
+  - conan install --build missing ..
   - cmake ..
 
 script:
