--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ compiler:
   - clang
 
 install:
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install pip; fi
   - pip install --user conan
   - conan config install .conan
