--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ compiler:
   - clang
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python pip; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then python.exe -m ensurepip; fi
   - pip install --user conan
   - conan config install .conan
 
