--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,8 @@ compiler:
   - clang
 
 install:
-  - echo "$TRAVIS_OS_NAME"
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python; fi
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then python.exe -m ensurepip; fi
-  - pip install --user conan
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install conan; fi
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then pip install --user conan; fi
   - conan config install .conan
 
 before_script:
