--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+&linux_install:
+  - python -m pip install --upgrade pip
+  - python -m pip install --user conan
+  - conan config install .conan
+
+&windows_install:
+  - choco install python --version 3.8
+  - python --version
+  - python -m pip install --upgrade pip
+  - python -m pip install conan
+  - conan config install .conan
+
 language: c
 
 matrix:
@@ -6,23 +18,24 @@ matrix:
       compiler:
         - gcc
         - clang
+      install:
+        <<: linux_install
 
     - os: linux
       arch: arm64
       compiler:
         - gcc
         - clang
+      install:
+        <<: linux_install
 
     - os: windows
       compiler:
         - gcc
         - clang
+      install:
+        <<: windows_install
 
-
-install:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install conan; fi
-  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then pip install --user conan; fi
-  - conan config install .conan
 
 before_script:
   - mkdir build
