--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: c
+sudo: required
 
 os:
   - linux
@@ -13,8 +14,8 @@ compiler:
   - clang
 
 install:
-    - if [ "$TRAVIS_OS_NAME" = "linux" ]; then python -m pip install --upgrade pip; fi
-    - if [ "$TRAVIS_OS_NAME" = "linux" ]; then python -m pip install --user conan; fi
+    - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo python -m pip install --upgrade pip; fi
+    - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo python -m pip install --user conan; fi
     - if [ "$TRAVIS_OS_NAME" = "linux" ]; then conan config install .conan; fi
 
     - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python --version 3.8; fi
