Update path to include python on windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
     - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install python --version 3.8; fi
     - if [ "$TRAVIS_OS_NAME" = "windows" ]; then pip3 install conan; fi
     - if [ "$TRAVIS_OS_NAME" = "windows" ]; then conan config install .conan; fi
+    - if [ "$TRAVIS_OS_NAME" = "windows" ]; then export PATH="/c/Python38:/c/Python38/Scripts:$PATH" fi
 
 
 before_script:
