--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ image: Visual Studio 2019
 shallow_clone: true
 
 cache:
-  - %USERPROFILE%\.conan -> conanfile.py
-  - %LOCALAPPDATA%\pip\Cache
+  - '%USERPROFILE%\.conan -> conanfile.py'
+  - '%LOCALAPPDATA%\pip\Cache'
 
 environment:
   PYTHON_HOME: "C:\\Python37"
