--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 before_script:
   - mkdir build
   - cd build
-  - conan install --build missing ..
+  - conan install --build missing .. --settings compiler="$CC"
   - cmake ..
 
 script:
