--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,5 @@ list(REMOVE_ITEM DISPATCHCTLD_SRCS ${PROJECT_SOURCE_DIR}/dispatchctld/main.c)
 list(REMOVE_ITEM DISPATCHD_SRCS ${PROJECT_SOURCE_DIR}/dispatchd/main.c)
 file(GLOB TESTS ${PROJECT_SOURCE_DIR}/test/*.c)
 add_executable(tests ${DISPATCHCTLD_SRCS} ${DISPATCHD_SRCS} ${TESTS})
-target_link_libraries(tests ${CONAN_LIBS})
+target_link_libraries(tests ${CONAN_LIBS} -fsanitize=address -fsanitize=leak)
 add_test(tests ${CMAKE_BINARY_DIR}/bin/tests)
